--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>
                         <b>Pillars of Creation</b> <small><i>rc_pillars</i></small> 2021<br/>
                         <small>Game: Ricochet (Deathmatch)</small><br/>
-                        <small>100% custom textures, unique theme (extremely rare along the few custom Ricochet maps that exist)<br/>
+                        <small>100% custom textures, unique theme (extremely rare among the few custom Ricochet maps that exist)<br/>
                         This map or a modified version of it was planned for inclusion as part of a Ricochet-based gamemode in the free Steam published game <i>Jabroni Brawl: Episode 3</i>, though I'm not sure if that ever happened.</small><br/>
                     </p>
                 </td>
